--- a/core/stylesheets/style.css
+++ b/core/stylesheets/style.css
@@ -6,7 +6,10 @@
 
 /* --- Indiscriminate tag selectors --- */
 /* TODO Finalize changes with this existing global css rewrite */
-
+html, body {
+    /* Make the body fill the height of the page when it isn't. */
+    min-height: 100%;
+}
 body {
     background: #EEF2FF url('img/fade-blue.png') repeat-x 50% 0%;
     font-family: arial, helvetica, sans-serif;
@@ -281,7 +284,7 @@ form[name="post"] input[name="submit"] {
 }
 .omitted {
     display: block;
-    margin-top: 1em;
+    /*margin-top: 1em;*/
 }
 .thread hr {
     border-color: #d9d6d9;
@@ -755,8 +758,7 @@ form[name="post"] input[name="submit"] {
 }
 #qr label {
     cursor: pointer;
-    margin: 0 2px 0 1px;
-    color: black;
+    margin: -2px 10px 0 2px;
 }
 #qrmove {
     min-width: 100%;
@@ -838,7 +840,7 @@ form[name="post"] input[name="submit"] {
 #qr input[type='checkbox'] {
     position: relative;
     top: 2px;
-    margin-right: 2px;
+    margin: 0px 4px 0 -1px;
 }
 #qrimageswrapper {
     overflow-x: scroll;
@@ -1131,7 +1133,7 @@ form[name="post"] input[name="submit"] {
 
 
 /* --- Home --- */
-.homepage h1 {
+.homepage > header h1 {
     font-size: 40pt;
     text-shadow: 0 0 0.25em rgb(136,136,136);
 }
